kustomize/frontend/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: container-registry.gitlab.cc-asp.fraunhofer.de/skala/ap3/core/frontend:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          name: mynature-adapter
      imagePullSecrets:
        - name: image-pull-secret
---
