kustomize/frontend/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-service
  name: frontend-service
  namespace: frontend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend
---
