kustomize/frontend/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-route
  labels:
    app: frontend-route
spec:
  host: frontend.apps.blockchain-europe.iml.fraunhofer.de
  to:
    kind: Service
    name: frontend-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
